--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,9 @@ version: 2
 jobs:
   build:
     environment:
-      IMAGE_NAME: wastrachan/gandi-ddns
+      REPO_NAME: wastrachan
+      IMAGE_NAME: gandi-ddns
+      IMAGE_VERSION: 1.0
     docker:
       - image: docker:latest
     steps:
@@ -15,13 +17,16 @@ jobs:
       - run:
           name: Build image
           command: |
-            docker build -t $IMAGE_NAME:latest .
+            docker build -t $IMAGE_NAME .
+            docker tag $IMAGE_NAME $REPO_NAME/$IMAGE_NAME:latest
+            docker tag $IMAGE_NAME $REPO_NAME$IMAGE_NAME:$IMAGE_VERSION
       - deploy:
           name: Publish image
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-              docker push $IMAGE_NAME:latest
+              docker push $REPO_NAME/$IMAGE_NAME:latest
+              docker push $REPO_NAME$IMAGE_NAME:$IMAGE_VERSION
             fi
 
 workflows:
@@ -29,13 +34,6 @@ workflows:
   commit:
     jobs:
       - build:
-          filters:
-            branches:
-              only: master
-  nightly:
-    triggers:
-      - schedule:
-          cron: "0 0 * * *"
           filters:
             branches:
               only: master
