--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,9 @@ version: 2
 jobs:
   build:
     environment:
-      REPO_NAME: wastrachan
-      IMAGE_NAME: gandi-ddns
-      IMAGE_VERSION: 1.0
+      REPO_NAME: "wastrachan"
+      IMAGE_NAME: "gandi-ddns"
+      IMAGE_VERSION: "1.0"
     docker:
       - image: docker:latest
     steps:
